# ultrashape-cleaning-replica

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: benchmark.md  concessions.md  stage1_watertighten.md  stage2_vlm.md  stage3_canonicalize.md  stage4_filter.md
examples/: README.md
outputs/benchmark/: summary.csv
scripts/: batch_filter_datasets.py  launch_batch_filter.sh  rerender_revlm.py  run_demo.sh  stress_viewer.py  summarize_benchmark.py
tests/: test_smoke.py
ultrashape_cleaning/: __init__.py  _config.py  _meshio.py  batch_clean.py  canonicalize.py  clean_mesh.py  filter_geometry.py  renderer.py  vlm_filter.py  watertighten.py
